--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "vuepress": "^1.8.0",
     "vuepress-theme-meteorlxy": "^1.9.0"
+  },
+  "dependencies": {
+    "vuepress-theme-reco": "^1.6.1"
   }
 }
